plugins {
    id 'application'
}

repositories {
    mavenCentral()
}

dependencies {
    // Dependencias de JavaFX 23
    implementation 'org.openjfx:javafx-controls:23'
    implementation 'org.openjfx:javafx-fxml:23'
    // Agrega más módulos de JavaFX si los necesitas
}

application {
    // Define la clase principal de tu aplicación
    mainClassName = 'Cronometro' // Cambia esto por el nombre de tu clase principal
}

java {
    // Configura la versión de Java
    toolchain {
        languageVersion = JavaLanguageVersion.of(13)
    }
}

tasks.withType(JavaExec) {

    jvmArgs = [
            '--module-path', classpath.asPath,
            '--add-modules', 'javafx.controls,javafx.fxml'
    ]
}